@@ -1,8 +1,6 @@
 Some Random Notes and Thoughts
 ==============================
 
-MuscatFX \STATLINE... -> $if{$or{$if{$ne{$msize,0},ok},$queryterms},...}
-
 Add ability to lookup in table (e.g. en -> English)?  Or just use create map
 like so: $set{Len,English}$set{Lfr,French}$set{Lde,German}
 And then lookup like so: $var{L$field{language}}
